<resources>
    <string name="app_name">saberLiou</string>
    <string name="tvUnderConstructionDescription_text">This page is under construction…</string>

    <!-- Home -->
    <string name="home_actionBarTitle_text">Home</string>
    <string name="optionsMenu_sharing_text">Sharing</string>
    <string name="optionsMenu_sharingSuccess_text">Hello World!</string>

    <!-- Settings -->
    <string name="settings_actionBarTitle_text">Settings</string>

    <!-- Github -->
    <string name="github_actionBarTitle_text">Github</string>
    <string name="ivGithubUserImage_contentDescription">A Github user\'s image</string>
    <string name="tvGithubUserFollowers_text">%d followers</string>
    <string name="tvGithubUserFollowing_text">%d following</string>

    <!-- API Connecting Status -->
    <string name="apiStatusImage_contentDescription">The image about connecting status of the API.</string>

    <!-- To-do Notes -->
    <string name="todoNotes_actionBarTitle_text">Todo Notes</string>

    <!-- Sleep Quality Tracker -->
    <string name="sleepQualityTracker_actionBarTitle_text">Sleep Quality Tracker</string>
    <string name="btnStartTracking_text">Start</string>
    <string name="btnStopTracking_text">Stop</string>
    <string name="tvSleepNightHeader_text">Sleep Results</string>
    <string name="ivSleepNightQualityImage_contentDescription">a sleep night quality</string>
    <string name="btnClearSleepNights_text">Clear</string>
    <string name="btnCloseSleepNightDetail_text">Close</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Sleep quality strings. -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>

    <!-- Contact Me. -->
    <string name="contactMe_actionBarTitle_text">Contact Me</string>
    <string name="tvContactMeDescription_text">Contact me if you have any question.</string>
    <string name="tilContactMeTitleLabel_hint">Title</string>
    <string name="tilContactMeDescriptionLabel_hint">Your Question</string>
    <string name="btnContactMeSubmit_text">Submit</string>
    <string name="btnContactMeSubmit_contentDescription">Submit title and description in Contact Me.</string>

    <!-- EditText. -->
    <string name="error_editText_notFilled">%s cannot be empty.</string>

</resources>