<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".sleepqualitytracker.SleepNightsFragment">

    <data>

        <variable
            name="viewModel"
            type="saberliou.demo.profile.sleepqualitytracker.SleepNightsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnClearSleepNights"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStopTracking">

            <TextView
                android:id="@+id/tvSleepNights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:text="@{viewModel.nightsString}" />

        </ScrollView>

        <Button
            android:id="@+id/btnStartTracking"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:enabled="@{viewModel.isBtnStartTrackingClickable}"
            android:onClick="@{() -> viewModel.onStartTracking()}"
            android:text="@string/btnStartTracking_text"
            app:layout_constraintBaseline_toBaselineOf="@id/btnStopTracking"
            app:layout_constraintEnd_toStartOf="@+id/btnStopTracking"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnStopTracking"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:enabled="@{viewModel.isBtnStopTrackingClickable}"
            android:onClick="@{() -> viewModel.onStopTracking()}"
            android:text="@string/btnStopTracking_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnStartTracking"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnClearSleepNights"
            style="@style/SleepButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:enabled="@{viewModel.isBtnClearSleepNightsClickable}"
            android:onClick="@{() -> viewModel.onClearSleepNights()}"
            android:text="@string/btnClearSleepNights_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>